--- a/templates/news.html
+++ b/templates/news.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,700,900">
     <link rel="stylesheet" href={%static "css/bootstrap.css"%}>
     <link rel="stylesheet" href={%static "css/fonts.css"%}>
     <link rel="stylesheet" href={%static "css/style.css"%} id="main-styles-link">
@@ -17,7 +15,7 @@
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="{%static "images/ie8-panel/warning_bar_0000_us.jpg"%}" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src={%static "js/html5shiv.min.js"%}></script>
     <![endif]-->
-	<script src="https://apps.bdimg.com/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src={%static 'js/jquery-3.6.0.min.js'%}></script>
 	<script>
 function loadXMLDoc1()
 {
@@ -105,27 +103,29 @@ window.onload=loadXMLDoc1()
                   <div class="rd-navbar-nav-wrap">
                     <!-- RD Navbar Nav-->
                     <ul class="rd-navbar-nav">
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="{%url 'index'%}">首页</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'index'%}">首页</a>
+                      </li>
+					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:main'%}">用户主页</a>
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:gov'%}">政府主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:thirdParty'%}">第三方主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:expert'%}">专家主页</a>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="">用户主页</a>
-                        <!-- RD Navbar Dropdown-->
+					  </li>
+					  <li class="rd-nav-item active"><a class="rd-nav-link" href="{%url 'main:manager'%}">平台管理员主页</a>
+					  </li>
+					  <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="">用户主页</a>
                         <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:gov'%}">政府主页</a>
 						  </li>
 						  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:thirdParty'%}">第三方主页</a>
 						  </li>
 						  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:expert'%}">专家主页</a>
+						  </li>
                         </ul>
-                      </li>
-					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'spider'%}">获取新闻</a>
-                      </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="#">Pages</a>
-                        <!-- RD Navbar Megamenu-->
+                      </li> -->
+                      <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="#">Pages</a>
                         <ul class="rd-menu rd-navbar-megamenu">
                           <li class="rd-megamenu-item">
                             <h6 class="rd-megamenu-title">Elements</h6>
@@ -168,7 +168,7 @@ window.onload=loadXMLDoc1()
                             </ul>
                           </li>
                         </ul>
-                      </li>
+                      </li> -->
                       <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'login:login'%}">登录</a>
 					  <!-- RD Navbar Dropdown-->
                         <ul class="rd-menu rd-navbar-dropdown">
@@ -196,13 +196,13 @@ window.onload=loadXMLDoc1()
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section section-bredcrumbs">
+     <section class="section section-bredcrumbs">
         <div class="container context-light breadcrumb-wrapper">
-          <h1>Single post</h1>
+          <h1>新闻页</h1>
           <ul class="breadcrumbs-custom">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Pages</a></li>
-            <li class="active">Single post</li>
+            <li><a href="{%url 'index'%}">主页</a></li>
+            <!-- <li><a href="#">Pages</a></li> -->
+            <li class="active">新闻页</li>
           </ul>
         </div>
       </section>
